# VocaDB-scripts

./: .gitignore  AT_calculate_artist_tags_based_on_songs.py  G_monthly_user.py  G_rated_songs_by_user.py  README.md  US_find_favourite_albums.py  US_find_favourite_producers.py  US_find_favourite_vocalists.py  U_notifications_to_songlist.py  at_calculate_artist_tags_based_on_songs.py  at_calculate_most_relevant_artists_by_a_tag.py  at_verify_tagged_artists.py  calculate_artist_tags_based_on_songs.py  calculate_most_relevant_artists_by_a_tag.py  comment-graph.py  export_dms.py  export_rated_song_entries_as_csv.py  find-favourite-artists.py  find-favourite-producers.py  find-favourite-vocalists.py  find_favourite_albums.py  find_favourite_producers.py  find_favourite_vocalists.py  g_monthly_comments.py  g_monthly_edits.py  g_monthly_entries_created.py  g_monthly_users.py  g_rated_songs_by_user.py  monthly-comment-graph.py  monthly-edit-graph.py  monthly-rated-songs-by-user.py  monthly_comment_graph.py  monthly_edit_graph.py  monthly_graph.py  monthly_rated_songs_by_user.py  monthly_user_graph.py  notifications_to_songlist.py  pyproject.toml  requirements.txt  setup.py  (+7 more)
api/: activity.py  artists.py  comments.py  notifications.py  songlists.py  songs.py  tags.py  users.py
scripts/: calculate_artist_tags_based_on_songs.py  find_favourite_albums.py  find_favourite_producers.py  find_favourite_vocalists.py  monthly_edit_graph.py  notifications_to_songlist.py
scripts/artist_tags/: calculate_by_songs.py  most_relevant_by_tag.py  verify.py
scripts/find/: favourite_albums.py  favourite_producers.py  favourite_tags.py  favourite_vocalists.py
scripts/graph/: graph_utils.py  monthly_comments.py  monthly_edits.py  monthly_entries.py  monthly_users.py  rated_songs_by_user.py
scripts/recommend/: recommend_advanced.py
scripts/tools/: export_rated_song_entries_as_csv.py
utils/: cache.py  console.py  data.py  files.py  graph.py  network.py
vdbpy/: config.py
vdbpy/api/: activity.py  artists.py  comments.py  notifications.py  songlists.py  songs.py  tags.py  users.py
vdbpy/utils/: console.py  data.py  files.py  graph.py  logger.py  network.py
