[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vocadb-scripts"
version = "2.0.0"
description = "Collection of VocaDB related scripts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaleido==0.2.1",
    "plotly",
    "ruff>=0.15.2",
    "ty>=0.0.18",
    "vdbpy",
]

[tool.setuptools]
packages = ["scripts", "scripts.graph"]

[tool.uv.sources]
vdbpy = { git = "https://github.com/Shiroizu/VDBpy" }

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [ # Copied from another project, TODO count these
    "ANN", # x, Missing return type
    "C901",	 # x, function too complex
    "COM812", # x, Trailing comma missing
    "D100", # x, Missing docstring in public module
    "D101",	# x, Missing docstring in public class
    "D102",	# x Missing docstring in a public method
    "D103",	# x, Missing docstring in public function
    "D107", # x, Missing docstring in `__init__`
    "D203", # ? incorrect-blank-line-before-class
    "D213", # ? multi-line-summary-first-line
    "EM101", # x, Exception must not use a string literal	
    "EM102", # x, Exception must not use an f-string literal
    "ERA001", # x, Commented-out code	
    "FBT001", # x, Boolean-typed positional argument in function definition
    "FBT002", # x, Boolean default positional argument in function definition	
    "FIX002", # x, Line contains TODO	
    "G004",	# x, Logging statement uses f-string
    "INP001", # x, Missing __init__.py	
    "PERF401", # x, Replace for loop with extend / list comprehension
    "PGH003", # x, Use specific rule codes when ignoring type issues
    "PLR0912", # x, Too many branches
    "PLR0913", # x, Too many arguments
    "PLR0915", # x, Too many statements
    "PLR2004", # x, Magic values
    "PTH",	# x, `open()` should be replaced by `Path.open()` !! TODO
    "S311",	# x, standard pseudo-random generator
    "SIM102", # x, Use a single `if` statement instead of nested `if` statements
    "TD", # x, Missing issue link for TODO
    "TRY002", # x, Create your own exception
    "TRY003", # x, void specifying long messages outside the exception class
    "TRY300", # x, try-consider-else
    "UP040", # x, Type alias instead of the `type` keyword
    "D104", # Missing docstring in public package
]

[tool.pyright]
typeCheckingMode = "strict"
